--- a/client/src/features/members/member-profile/member-profile.html
+++ b/client/src/features/members/member-profile/member-profile.html
@@ -9,6 +9,41 @@
             <span>{{ member.lastActive | date : ' dd MMM yyyy h:mm a' }}</span>
         </div>
         <h3 class="text-lg font-semibold text-primary">About {{ member.displayName }}</h3>
+
+        @if(memberService.editMode()){
+           <form #editForm="ngForm" (ngSubmit)="updateProfile()" class="flex flex-col w-full gap-4">
+            <label class="floating-label">
+                <span>Display Name</span>
+                <input class="input w-full"
+                [(ngModel)]="editableMember.displayName"
+                name="displayName">
+            </label>
+            <label class="floating-label">
+                <span>Description</span>
+                <textarea class="textarea w-full"
+                [(ngModel)]="editableMember.description"
+                name="description"> </textarea>
+            </label>
+            <label class="floating-label">
+                <span>City</span>
+                <input class="input w-full"
+                [(ngModel)]="editableMember.city"
+                name="city">
+            </label>
+            <label class="floating-label">
+                <span>Country</span>
+                <input class="input w-full"
+                [(ngModel)]="editableMember.country"
+                name="country">
+            </label>
+            <div class="flex self-end">
+                <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+            </form> 
+        }
+        @else {
         <div>{{member.description}}</div>
+        }
+
     </div>
 }
